--- a/src/frontend/pages/consumers/AccountPage/AccountPage.module.scss
+++ b/src/frontend/pages/consumers/AccountPage/AccountPage.module.scss
@@ -2,16 +2,24 @@
 @import "../../../../../src/styles/mixins";
 @import "../../../../../src/styles/responsive";
 
-.container {
+.title {
+  display: none;
+  @include lg-min {
+    display: block;
+    font-size: 2rem;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 3rem;
+  }
+}
+
+.accoyntData {
+  @include wrapper;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
   width: 100%;
-  .accoyntData {
-    @include wrapper;
-    display: flex;
-    flex-direction: column;
-    gap: 2em;
-    width: 100%;
-    @include lg-min {
-      flex-direction: row;
-    }
+  @include lg-min {
+    flex-direction: row;
   }
 }
